Bug: Fixed issue where body line-height caused white space above footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,8 @@ html {
     font-family: sans-serif;
 }
 
-.latest-release-title > h1 {
-    font-size: 2rem;
-    font-family: 'Benne', serif;
-    margin-bottom: 0px;
+body {
+    line-height: 0;
 }
 
 .nav-link, .navbar-brand {
@@ -23,22 +21,31 @@ html {
     font-size: 1.8rem;
 }
 
+.latest-release-title > h1 {
+    font-size: 2rem;
+    font-family: 'Benne', serif;
+    margin-bottom: 0px;
+}
+
 .latest-release-info > h2 {
     font-family: 'Volkhov', serif;
     font-weight: 400;
-    padding-top: 10px;
+    padding-top: 2vh;
+    line-height: 2rem;
 }
 
 .latest-release-info > p {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 0.9rem;
+    line-height: 1.5;
 }
 
 /*--------------------------------------------Navbar.css*/
 
 .navbar {
     padding: 0.1rem 1rem;
+    line-height: 1.5rem;
 }
 
 .navbar-custom {
@@ -65,7 +72,7 @@ html {
 /*--------------------------------------------Hero Image, Logo, Social Icons.css*/
 
 .hero {
-    height: 95vh;
+    height: 96vh;
     background: url("../images/wahero2.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
@@ -178,9 +185,10 @@ html {
 .yt-embed-home {
     width: 100%;
     height: 550px;
+    font-size: 0;
 }
 
-/*--------------------------------------------Latest Release Artwork/Info, Store Icon.css*/
+/*--------------------------------------------------------------Footer.css*/
 
 .footer-container {
 height: 8vh;
